--- a/templates/index.html
+++ b/templates/index.html
@@ -17,20 +17,20 @@
         <p>点击地市探索福建各地的文化特色</p>
     </div>
     
+    <!-- 地图图例 - 移动到地图容器外部 -->
+    <div class="map-legend">
+        <div class="legend-item">
+            <div class="legend-color unexplored"></div>
+            <span>未探索</span>
+        </div>
+        <div class="legend-item">
+            <div class="legend-color explored"></div>
+            <span>已探索</span>
+        </div>
+    </div>
+    
     <div class="map-wrapper">
         <div id="fujian-map" class="fujian-map"></div>
-        
-        <!-- 地图图例 -->
-        <div class="map-legend">
-            <div class="legend-item">
-                <div class="legend-color unexplored"></div>
-                <span>未探索</span>
-            </div>
-            <div class="legend-item">
-                <div class="legend-color explored"></div>
-                <span>已探索</span>
-            </div>
-        </div>
         
         <!-- 地图控制按钮 -->
         <div class="map-controls">
