--- a/templates/user_center.html
+++ b/templates/user_center.html
@@ -102,31 +102,51 @@
                     <div class="city-item">
                         <span class="city-name">福州</span>
                         <span class="city-status">
+                            {% if '福州' in explored_cities %}
+                            <i class="fas fa-check-circle" style="color: #2ed573;"></i> 已探索
+                            {% else %}
                             <i class="fas fa-times-circle"></i> 未探索
+                            {% endif %}
                         </span>
                     </div>
                     <div class="city-item">
                         <span class="city-name">南平</span>
                         <span class="city-status">
+                            {% if '南平' in explored_cities %}
+                            <i class="fas fa-check-circle" style="color: #2ed573;"></i> 已探索
+                            {% else %}
                             <i class="fas fa-times-circle"></i> 未探索
+                            {% endif %}
                         </span>
                     </div>
                     <div class="city-item">
                         <span class="city-name">龙岩</span>
                         <span class="city-status">
+                            {% if '龙岩' in explored_cities %}
+                            <i class="fas fa-check-circle" style="color: #2ed573;"></i> 已探索
+                            {% else %}
                             <i class="fas fa-times-circle"></i> 未探索
+                            {% endif %}
                         </span>
                     </div>
                     <div class="city-item">
                         <span class="city-name">泉州</span>
                         <span class="city-status">
+                            {% if '泉州' in explored_cities %}
+                            <i class="fas fa-check-circle" style="color: #2ed573;"></i> 已探索
+                            {% else %}
                             <i class="fas fa-times-circle"></i> 未探索
+                            {% endif %}
                         </span>
                     </div>
                     <div class="city-item">
                         <span class="city-name">莆田</span>
                         <span class="city-status">
+                            {% if '莆田' in explored_cities %}
+                            <i class="fas fa-check-circle" style="color: #2ed573;"></i> 已探索
+                            {% else %}
                             <i class="fas fa-times-circle"></i> 未探索
+                            {% endif %}
                         </span>
                     </div>
                 </div>
