--- a/templates/cities/putian.html
+++ b/templates/cities/putian.html
@@ -267,12 +267,9 @@
 
     <!-- 探索完成按钮 -->
     <div class="explore-actions">
-        <form action="{{ url_for('mark_explored') }}" method="POST">
-            <input type="hidden" name="city_name" value="莆田">
-            <button type="submit" class="btn btn-primary">
-                <i class="fas fa-check-circle"></i> 标记为已探索
-            </button>
-        </form>
+        <button id="mark-explored-btn" class="btn btn-primary">
+            <i class="fas fa-check-circle"></i> 标记为已探索
+        </button>
     </div>
 </div>
 {% endblock %}
